// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/TaskModal render should render a default component with default props 1`] = `
<Modal
  className="be-modal task-modal"
  data-testid="create-task-modal"
  focusElementSelector=".task-modal input"
  isOpen={true}
  onRequestClose={[MockFunction]}
  style={
    Object {
      "backdrop": Object {},
      "dialog": Object {},
    }
  }
  title={
    <React.Fragment>
      <FormattedMessage
        defaultMessage="Create Approval Task"
        id="be.tasks.createTask.approval.title"
      />
      <BetaFeedbackBadge
        formUrl="http://example.dentist/"
        tooltip={true}
      />
    </React.Fragment>
  }
>
  <div
    className="be"
  >
    <TaskForm
      approverSelectorContacts={null}
      createTask={[MockFunction]}
      editMode="CREATE"
      getAvatarUrl={[MockFunction]}
      onCancel={[MockFunction]}
      onCreateError={[MockFunction]}
      onCreateSuccess={[MockFunction]}
    />
  </div>
</Modal>
`;

exports[`elements/content-sidebar/TaskModal render using type APPROVAL and mode CREATE yields the proper modal title 1`] = `
<Modal
  className="be-modal task-modal"
  data-testid="create-task-modal"
  focusElementSelector=".task-modal input"
  isOpen={true}
  onRequestClose={[MockFunction]}
  style={
    Object {
      "backdrop": Object {},
      "dialog": Object {},
    }
  }
  title={
    <React.Fragment>
      <FormattedMessage
        defaultMessage="Create Approval Task"
        id="be.tasks.createTask.approval.title"
      />
      <BetaFeedbackBadge
        formUrl="http://example.dentist/"
        tooltip={true}
      />
    </React.Fragment>
  }
>
  <div
    className="be"
  >
    <TaskForm
      approverSelectorContacts={null}
      createTask={[MockFunction]}
      editMode="CREATE"
      getAvatarUrl={[MockFunction]}
      onCancel={[MockFunction]}
      onCreateError={[MockFunction]}
      onCreateSuccess={[MockFunction]}
      taskType="APPROVAL"
    />
  </div>
</Modal>
`;

exports[`elements/content-sidebar/TaskModal render using type APPROVAL and mode EDIT yields the proper modal title 1`] = `
<Modal
  className="be-modal task-modal"
  data-testid="create-task-modal"
  focusElementSelector=".task-modal input"
  isOpen={true}
  onRequestClose={[MockFunction]}
  style={
    Object {
      "backdrop": Object {},
      "dialog": Object {},
    }
  }
  title={
    <React.Fragment>
      <FormattedMessage
        defaultMessage="Modify Approval Task"
        id="be.tasks.editTask.approval.title"
      />
      <BetaFeedbackBadge
        formUrl="http://example.dentist/"
        tooltip={true}
      />
    </React.Fragment>
  }
>
  <div
    className="be"
  >
    <TaskForm
      approverSelectorContacts={null}
      createTask={[MockFunction]}
      editMode="EDIT"
      getAvatarUrl={[MockFunction]}
      onCancel={[MockFunction]}
      onCreateError={[MockFunction]}
      onCreateSuccess={[MockFunction]}
      taskType="APPROVAL"
    />
  </div>
</Modal>
`;

exports[`elements/content-sidebar/TaskModal render using type GENERAL and mode CREATE yields the proper modal title 1`] = `
<Modal
  className="be-modal task-modal"
  data-testid="create-task-modal"
  focusElementSelector=".task-modal input"
  isOpen={true}
  onRequestClose={[MockFunction]}
  style={
    Object {
      "backdrop": Object {},
      "dialog": Object {},
    }
  }
  title={
    <React.Fragment>
      <FormattedMessage
        defaultMessage="Create General Task"
        id="be.tasks.createTask.general.title"
      />
      <BetaFeedbackBadge
        formUrl="http://example.dentist/"
        tooltip={true}
      />
    </React.Fragment>
  }
>
  <div
    className="be"
  >
    <TaskForm
      approverSelectorContacts={null}
      createTask={[MockFunction]}
      editMode="CREATE"
      getAvatarUrl={[MockFunction]}
      onCancel={[MockFunction]}
      onCreateError={[MockFunction]}
      onCreateSuccess={[MockFunction]}
      taskType="GENERAL"
    />
  </div>
</Modal>
`;

exports[`elements/content-sidebar/TaskModal render using type GENERAL and mode EDIT yields the proper modal title 1`] = `
<Modal
  className="be-modal task-modal"
  data-testid="create-task-modal"
  focusElementSelector=".task-modal input"
  isOpen={true}
  onRequestClose={[MockFunction]}
  style={
    Object {
      "backdrop": Object {},
      "dialog": Object {},
    }
  }
  title={
    <React.Fragment>
      <FormattedMessage
        defaultMessage="Modify General Task"
        id="be.tasks.editTask.general.title"
      />
      <BetaFeedbackBadge
        formUrl="http://example.dentist/"
        tooltip={true}
      />
    </React.Fragment>
  }
>
  <div
    className="be"
  >
    <TaskForm
      approverSelectorContacts={null}
      createTask={[MockFunction]}
      editMode="EDIT"
      getAvatarUrl={[MockFunction]}
      onCancel={[MockFunction]}
      onCreateError={[MockFunction]}
      onCreateSuccess={[MockFunction]}
      taskType="GENERAL"
    />
  </div>
</Modal>
`;
